Header now correctly sized on mobile

--- a/index.css
+++ b/index.css
@@ -162,4 +162,8 @@ input:focus {
     padding-top: .1rem !important;
   }
 
+  h1 {
+    font-size: 1.7em;
+  }
+
 }
